# opengl-game

./: CMakeLists.txt  README.md
include/: block.h  commons.h  controls.h  glad.h  keyboard.h  mouse.h  shader.h
src/: block.c  controls.c  glad.c  keyboard.c  main.c  mouse.c  shader.c
src/shaders/: light.fs  light.vs
